<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@string/app_name"
        android:layout_width="201dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="56dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@string/nome_jogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/nome_jogador"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nome_jogador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@string/selecione_idade"
        android:layout_width="283dp"
        android:layout_height="25dp"
        android:text="@string/selecione_idade"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <CheckBox
        android:id="@string/ckb_goleiro"
        android:layout_width="149dp"
        android:layout_height="36dp"
        android:text="@string/ckb_goleiro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <CheckBox
        android:id="@string/ckb_zagueiro"
        android:layout_width="149dp"
        android:layout_height="36dp"
        android:text="@string/ckb_zagueiro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <CheckBox
        android:id="@string/ckb_meia"
        android:layout_width="149dp"
        android:layout_height="36dp"
        android:text="@string/ckb_meia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <CheckBox
        android:id="@string/ckb_lateral"
        android:layout_width="149dp"
        android:layout_height="36dp"
        android:text="@string/ckb_lateral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <CheckBox
        android:id="@string/ckb_atacante"
        android:layout_width="149dp"
        android:layout_height="36dp"
        android:text="@string/ckb_atacante"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <TextView
        android:id="@string/selecione_posicao"
        android:layout_width="283dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="156dp"
        android:text="@string/selecione_posicao"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="129dp"
        android:layout_height="152dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799">

        <RadioButton
            android:id="@string/radio_idades_1"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_idades_1" />

        <RadioButton
            android:id="@string/radio_idades_2"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_idades_2" />

        <RadioButton
            android:id="@string/radio_idades_3"
            android:layout_width="131dp"
            android:layout_height="42dp"
            android:text="@string/radio_idades_3" />

        <RadioButton
            android:id="@string/radio_idades_4"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_idades_4" />
    </RadioGroup>

    <Button
        android:id="@string/cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Cadastrar"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>